--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <guava.version>22.0</guava.version>
         <kryo.version>4.0.2</kryo.version>
         <netty.version>4.1.38.Final</netty.version>
+        <atomix.version>3.0.6</atomix.version>
 
         <!-- Maven -->
         <maven.source.plugin.version>2.2.1</maven.source.plugin.version>
@@ -86,6 +87,11 @@
             <groupId>io.netty</groupId>
             <artifactId>netty-transport-native-epoll</artifactId>
             <classifier>linux-x86_64</classifier>
+        </dependency>
+        <dependency>
+            <groupId>io.atomix</groupId>
+            <artifactId>atomix</artifactId>
+            <version>${atomix.version}</version>
         </dependency>
         <dependency>
             <groupId>io.netty</groupId>
