--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,6 @@
 
         <!-- Core -->
         <guava.version>22.0</guava.version>
-        <kryo.version>4.0.2</kryo.version>
-        <netty.version>4.1.38.Final</netty.version>
         <atomix.version>3.0.6</atomix.version>
 
         <!-- Maven -->
@@ -52,18 +50,6 @@
         </developer>
     </developers>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>io.netty</groupId>
-                <artifactId>netty-bom</artifactId>
-                <version>${netty.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
     <dependencies>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -76,27 +62,14 @@
             <version>${guava.version}</version>
         </dependency>
         <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-codec</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-handler</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-transport-native-epoll</artifactId>
-            <classifier>linux-x86_64</classifier>
-        </dependency>
-        <dependency>
             <groupId>io.atomix</groupId>
             <artifactId>atomix</artifactId>
             <version>${atomix.version}</version>
         </dependency>
         <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-transport</artifactId>
-            <version>${netty.version}</version>
+            <groupId>io.atomix</groupId>
+            <artifactId>atomix-raft</artifactId>
+            <version>${atomix.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
